[package]
name = "gdstk-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
autocxx = "0.30.0"
cxx = "1.0.194"
glam = "0.32.1"
thiserror = "2.0.18"

[build-dependencies]
autocxx-build = "0.30.0"

[dev-dependencies]
image = "0.25.10"
imageproc = "0.26.1"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
pixelmatch = "0.1.0"
colored = "3.1.1"
